@@ -570,10 +570,7 @@ sub rules
                     # ignore rules for empty groups
                     next;
                 }
-                $rule->{users} = [ (map {
-                                          my $name =  $_->name();
-                                          lc $name;
-                                      } @{$users}) ];
+                $rule->{users} = $users;
             } elsif ($mode eq $self->parentModule->AUTH_MODE_EXTERNAL_AD()) {
                 $rule->{adDN} = $source->value();
             }
